# pointpillars

./: .gitignore  README.md
pcdet/: version.py
pointpillars_ws/: .clang-format  README.md
pointpillars_ws/config/: rosconsole.conf
pointpillars_ws/src/det3d/: CMakeLists.txt  package.xml
pointpillars_ws/src/det3d/include/det3d/: det3d.hpp
pointpillars_ws/src/det3d/launch/: det3d.launch
pointpillars_ws/src/det3d/pointpillars/: CMakeLists.txt
pointpillars_ws/src/det3d/pointpillars/include/: kernel.h  params.h  pillarScatter.h  pointpillar.h  postprocess.h  preprocess.h
pointpillars_ws/src/det3d/pointpillars/src/: pointpillar.cpp
pointpillars_ws/src/det3d/src/: det3d.cpp  det3d_node.cpp
